update tsconfig to support import problems

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         "declarationMap": true,
         "allowJs": true,
         "outDir": "dist",
+        "esModuleInterop": true
     },
     "exclude": [
         "node_modules"
