--- a/package.json
+++ b/package.json
@@ -33,5 +33,11 @@
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
     "webpack": "^5.88.2"
+  },
+  "dependencies": {
+    "@xmldom/xmldom": "^0.8.10",
+    "deepmerge": "^4.3.1",
+    "lodash": "^4.17.21",
+    "predefined-ds": "^1.7.2"
   }
 }
