--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,11 @@
         "declarationMap": true,
         "allowJs": true,
         "outDir": "dist",
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "lib": [
+            "ES2022"
+        ]
     },
     "exclude": [
         "node_modules"
